--- a/src/styles/GameList.css
+++ b/src/styles/GameList.css
@@ -1,9 +1,9 @@
 .game-list-container {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-evenly;
     position: relative;
-    width: 100vw;
+    width: 80vw;
 }
 
 .nav-button {
@@ -20,7 +20,7 @@
 
 .game-list-wrapper {
     overflow: hidden;
-    width: 100%;
+    width: 70vw;
 }
 
 .game-list {
